@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 package HTTP::CookieMonster;
-$HTTP::CookieMonster::VERSION = '0.08';
+$HTTP::CookieMonster::VERSION = '0.09';
 
 use 5.006;
 
@@ -214,7 +214,7 @@ cookies. You can fetch an ARRAY of all your cookies:
     my @all_cookies = $monster->all_cookies;
     foreach my $cookie ( @all_cookies ) {
         print $cookie->key;
-        print $cookie->value;
+        print $cookie->val;
         print $cookie->secure;
         print $cookie->domain;
         # etc
@@ -241,7 +241,7 @@ If you want to mangle the cookie before the next request, that's easy too.
 Or, add an entirely new cookie to the jar:
 
     use HTTP::CookieMonster::Cookie;
-    my $cookie = HTTP::CookieMonster::Cookie->new
+    my $cookie = HTTP::CookieMonster::Cookie->new(
         key       => 'cookie-name',
         val       => 'cookie-val',
         path      => '/',
